build: set UV_FROZEN everywhere so that lockfile is not modified
There's no desire to update the uv.lock in source code control when
executing these commands: it can only trigger noise and confusion.

This can happen if you have some custom uv config on your machine which
would resolve packages differently (e.g. UV_DEFAULT_REGISTRY=)

--- a/.github/workflows/run-checks-all.yml
+++ b/.github/workflows/run-checks-all.yml
@@ -58,6 +58,7 @@ jobs:
         run: uv run prek --all-files
         env:
           UV_PROJECT: dev-tools
+          UV_FROZEN: "1"
 
 
   # This runs all validation checks without tests.
