build: declare a minimum version in prek configuration file.
This delivers a clear error message if the user happens to have
a too-old prek, rather than something confusing.

We require the 0.2.29 which supports includes/excludes as yaml glob
lists rather than the previous regexp approach, this is just a massive
improvement to the maintainers of these files:

https://github.com/j178/prek/releases/tag/v0.2.29

--- a/.pre-commit-config.yml
+++ b/.pre-commit-config.yml
@@ -1,5 +1,6 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/j178/prek/refs/heads/master/prek.schema.json
+minimum_prek_version: 0.2.29
 default_install_hook_types:
   - pre-commit
 default_stages:
