ci: also display diff of any reformats/fixes on failure
Improves the output from the github workflow if something had to be
reformatted or fixed.

--- a/.github/workflows/run-checks-all.yml
+++ b/.github/workflows/run-checks-all.yml
@@ -55,7 +55,7 @@ jobs:
           cache-suffix: dev-tools
 
       - name: Run prek
-        run: uv run prek --all-files
+        run: uv run prek --all-files --show-diff-on-failure
         env:
           UV_PROJECT: dev-tools
           UV_FROZEN: "1"
